(lang dune 3.16)

(name lc3)

(generate_opam_files true)

(source
 (github frectonz/lc3))

(authors "frectonz")

(maintainers "frectonz")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name lc3)
 (synopsis "Observable LC3 Virtual Machine")
 (depends ocaml dune notty nottui))
